css/index.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

html, body, div, span, applet, object, iframe,
h1, h2, h3, h4, h5, h6, p, blockquote, pre,
a, abbr, acronym, address, big, cite, code,
del, dfn, em, img, ins, kbd, q, s, samp,
small, strike, strong, sub, sup, tt, var,
b, u, i, center,
dl, dt, dd, ol, ul, li,
fieldset, form, label, legend,
table, caption, tbody, tfoot, thead, tr, th, td,
article, aside, canvas, details, embed, 
figure, figcaption, footer, header, hgroup, 
menu, nav, output, ruby, section, summary,
time, mark, audio, video {
	margin: 0;
	padding: 0;
	border: 0;
	font-size: 100%;
	font: inherit;
	vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article, aside, details, figcaption, figure, 
footer, header, hgroup, menu, nav, section {
	display: block;
}
body {
	line-height: 1;
}
ol, ul {
	list-style: none;
}
blockquote, q {
	quotes: none;
}
blockquote:before, blockquote:after,
q:before, q:after {
	content: '';
	content: none;
}
table {
	border-collapse: collapse;
	border-spacing: 0;
}

/* Set every element's box-sizing to border-box */
* {
    box-sizing: border-box;
}

html, body {
    height: 100%;
    font-family: 'Titillium Web', sans-serif;
}

h1, h2, h3, h4, h5 {
    font-family: 'Bangers', cursive;
    letter-spacing: 1px;
    margin-bottom: 15px;
}

/* Your code starts here! */

.contain {
	width: 1200px;
    margin: 0 auto;
}

header nav {
	display: inline-block;
	margin: 0 auto;
	
}

.top header nav a {
	margin: 0 30px;
	padding: 20px;
	display: inline-block;
	color: gray;
	text-decoration: none;
}

.logo {
	margin: 0 auto;
	padding-left: 94px;
	
}

.top {
	border-bottom: 2px solid black;
	border-spacing: 200px;
}

h1{
	display: inline-block;
	font-size: 100px;
	padding-left: 15%;
	margin: 0 auto;
	
}

.head-img {
	margin-right: 0 auto;
	float: right;
}

h4{
	display: inline-block;
	border: 2px solid black;
	max-width: 500px;
	margin: 20px 20% 100px;
	padding: 7px 35px;

}

/* done above */

.feat {
	display: inline-block;
	margin: 20px auto;
	height: 50px;
	width: 500px;	
}

.about {
	display: inline-block;
	margin: 20px 90px;
	height: 50px;
	width: 500px;
}

.mid-img {
	margin: 30px 10%;
}

.serve{
	display: inline-block;
	margin: 20px 10px;
	height: 50px;
	width: 370px;	
}

.prod {
	display: inline-block;
	margin: 20px 10px;
	height: 50px;
	width: 370px;	
}

.vis {
	display: inline-block;
	margin: 20px 10px;
	height: 50px;
    width: 370px;	
    
}

.mid {
	border-bottom: 2px solid black;
	border-spacing: 200px;
	margin-bottom: 20px;
	padding-bottom: 20px;
}

.addy {
	display: inline-block;
	margin: 10px auto;
}

.copy {
	display: inline-block;
	margin-left: 30%;
	margin-bottom: 5%

}
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */
/* --------------------- DONE ABOVE ------------------ */

@media screen and (max-width: 800px){
    body{
        background-color:#CFFFEB;
    }
    .contain {
        width: 800px;
        margin: 0 auto;
    }

    .top header nav{
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: center;
       
        
    }


    a {
        font-size:20px;
        width: 50px;
        padding: 0 auto;
        margin: 0 auto;
        
    }

    .innoMob {
        display: flex;
        justify-content: flex-start;
        padding-left: 20px;
        width: 700px;
        font-size: 20px;
        
    }

    h4{
        display: flex;
        justify-content: center;
    }
    

    .logo {
        display: none;
    }

    .head-img {
        display: none;
    }
    

    .middle-img{
        display: flex;
        justify-content: flex-start;
        width: 650px;
        padding-right: 50px;
        
        
    }

    .copy {
        display: flex;
        justify-content: flex-start;
    }

    .mid {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
        padding-bottom: 80px;

        
    }

    .feat{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
    }
    

    .about {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
        padding-top: 10px;
        padding-bottom: 10px;
        margin: 20px auto;
        
    }
    .serve {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
        padding-top: 20px;
        padding-bottom: 10px;
        
        margin-left: 0px;
        
        
    }
    .prod {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
        padding-top: 30px;
        padding-bottom: 10px;
        
        margin-left: 0px;
    }
    .vis {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 750px;
        padding-top: 40px;
        padding-bottom: 10px;
        
        margin-left: 0px;
    }
}

/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */
/* --------------------- DONE BELOW ------------------ */


@media screen and (max-width: 500px){
    body{
        background-color:#FFB293;
    }

    .contain {
        width: 500px;
        margin: 0 auto;
    }

    .top header nav{
        display: flex;
        flex-wrap: wrap;
        flex-direction: row;
        justify-content: flex-start;
        padding: 0;
        margin: 0;
        
    }


    a {
        font-size:10px;
        width: 50px;
        padding: 0 auto;
        margin: 0 auto;
        
    }

    .innoMob {
        display: flex;
        justify-content: flex-start;
        padding-left: 20px;
        width: 240px;
        font-size: 20px;
        
    }

    h4{
        display: flex;
        justify-content: center;
    }
    

    .logo {
        display: none;
    }

    .head-img {
        display: none;
    }

    .mid-img{
        display: none;
    }

    .copy {
        display: flex;
        justify-content: flex-start;
    }

    .mid {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        padding-bottom: 80px;
        
    }

    .feat{
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        
        
        
    }
    

    .about {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        padding-top: 10px;
        padding-bottom: 10px;
        margin: 20px auto;
        
    }
    .serve {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        padding-top: 20px;
        padding-bottom: 10px;
        
        margin-left: 0px;
        
        
    }
    .prod {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        padding-top: 30px;
        padding-bottom: 10px;
        
        margin-left: 0px;
    }
    .vis {
        display: flex;
        flex-direction: column;
        justify-content: flex-start;
        width: 450px;
        padding-top: 40px;
        padding-bottom: 10px;
        
        margin-left: 0px;
    }
}

